--- a/projects/UltraVideo/index.html
+++ b/projects/UltraVideo/index.html
@@ -97,7 +97,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2404.10760"
+                <a href="https://arxiv.org"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -126,7 +126,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/zhangzjn/ultravideo"
+                <a href="https://github.com/xzc-zju/UltraVideo"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -142,6 +142,16 @@
                       <i class="far fa-images"></i>
                   </span>
                   <span>Data</span>
+                  </a>
+              </span>
+              <!-- Models Link. -->
+              <span class="link-block">
+                <a href="https://huggingface.co/APRIL-AIGC/UltraWan"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-rocket"></i>
+                  </span>
+                  <span>Models</span>
                   </a>
               </span>
             </div>
@@ -254,12 +264,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      <!-- @article{invad,
-        title={Learning Feature Inversion for Multi-class Anomaly Detection under General-purpose COCO-AD Benchmark},
-        author={Jiangning Zhang and Chengjie Wang and Xiangtai Li and Guanzhong Tian and Zhucun Xue and Yong Liu and Guansong Pang and Dacheng Tao},
-        journal={arXiv preprint arXiv:2404.10760},
-        year={2024}
-      } -->
+      @article{ultravideo,
+        title={UltraVideo: High-Quality UHD Video Dataset with Comprehensive Captions},
+        author={Xue, Zhucun and Zhang, Jiangning and Hu, Teng and He, Haoyang and Chen, Yinan and Cai, Yuxuan and Wang, Yabiao and Wang, Chengjie and Liu, Yong and Li, Xiangtai and Tao, Dacheng}, 
+        journal={arXiv preprint arXiv},
+        year={2025}
+      }
     </code></pre>
   </div>
 </section>
