--- a/projects/UltraVideo/index.html
+++ b/projects/UltraVideo/index.html
@@ -97,7 +97,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org"
+                <a href="https://arxiv.org/abs/2506.13691"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -149,7 +149,7 @@
                 <a href="https://huggingface.co/APRIL-AIGC/UltraWan"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="far fa-rocket"></i>
+                      <i class="far fa-database"></i>
                   </span>
                   <span>Models</span>
                   </a>
