--- a/projects/UltraVideo/index.html
+++ b/projects/UltraVideo/index.html
@@ -267,7 +267,7 @@
       @article{ultravideo,
         title={UltraVideo: High-Quality UHD Video Dataset with Comprehensive Captions},
         author={Xue, Zhucun and Zhang, Jiangning and Hu, Teng and He, Haoyang and Chen, Yinan and Cai, Yuxuan and Wang, Yabiao and Wang, Chengjie and Liu, Yong and Li, Xiangtai and Tao, Dacheng}, 
-        journal={arXiv preprint arXiv},
+        journal={arXiv preprint arXiv:2506.13691},
         year={2025}
       }
     </code></pre>
