--- a/projects/UltraVideo/index.html
+++ b/projects/UltraVideo/index.html
@@ -74,7 +74,8 @@
           <img src="assets/images/logo.png" class="interpolation-image" alt="logo" width="100%">
           <div class="is-size-5 publication-authors">
             <span class="author-block"> <a href="https://scholar.google.com/citations?user=m3KDreEAAAAJ&hl=en">Zhucun Xue</a><sup>1</sup>, </span>
-            <span class="author-block"> <a href="https://scholar.google.com/citations?user=2hA4X9wAAAAJ&hl=en">Jiangning Zhang†</a><sup>1</sup>, </span>
+            <span class="author-block"> <a href="https://zhangzjn.github.io/">Jiangning Zhang†</a><sup>1</sup>, </span>
+            <!-- <span class="author-block"> <a href="https://scholar.google.com/citations?user=2hA4X9wAAAAJ&hl=en">Jiangning Zhang†</a><sup>1</sup>, </span> -->
             <span class="author-block"> <a href="https://scholar.google.com/citations?user=Jm5qsAYAAAAJ&hl=en">Teng Hu</a><sup>2</sup>, </span>
             <span class="author-block"> <a href="https://scholar.google.com/citations?user=8NfQv1sAAAAJ&hl=en">Haoyang He</a><sup>1</sup>, </span>
             <span class="author-block"> <a href="">Yinan Chen</a><sup>1</sup>, </span>
@@ -142,6 +143,15 @@
                       <i class="far fa-images"></i>
                   </span>
                   <span>Data</span>
+                  </a>
+              </span>
+              <span class="link-block">
+                <a href="https://huggingface.co/datasets/APRIL-AIGC/UltraVideo-Long"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="far fa-images"></i>
+                  </span>
+                  <span>Data-Long</span>
                   </a>
               </span>
               <!-- Models Link. -->
